--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,10 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-html {
-  font-size: 22px;
-}
 
 body {
-  min-height: 100vh;
-  background-color: #E7CBCB;
+  margin: 0; 
+  padding: 0; 
+  background-color: #E7CBCB; 
+  height: 100vh; 
+  display: flex;
+  justify-content: center; 
+  align-items: center; 
 }
